finished app fixed toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Papagex <geeksgeckosandgoodvibes@gmail.com>"]
 edition = "2021"
 build = "build.rs"
+description = "business income distribution calculator"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -15,4 +16,4 @@ slint-build = "1.4"
 
 [package.metadata.bundle]
 name = "Income Distribution"
-identifier = ""
+identifier = "io.github.papagex.finance-dist"
